# Parallel-Seam-Carving-on-GPU

./: CMakeLists.txt  OpenCV Cheatsheet.md  README.md
assets/: My CUDA Cheatsheet.md  My OpenCV Cheatsheet.md
src/: CPUCarver.cpp  CPUCarver.h  EnergyKernels.cu  EnergyKernels.cuh  GPUCarver.cpp  GPUCarver.h  SeamCarver.cpp  SeamCarver.h  main.cpp  test.cpp  utils.cpp  utils.h
